# Cyprus

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
cyprus-server/: .env  .gitignore  Cargo.toml  README.md  example.env
cyprus-server/.cargo/: config
cyprus-server/src/: book.rs  database.rs  main.rs  playback_location.rs  server.rs  user.rs
cyprus-server/src/database/: books_queries.rs  playback_locations_queries.rs
cyprus-server/src/server/: api_response.rs
src/: error.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: book.rs  main.rs
src/lib/components/: BookList.svelte  BookListEntry.svelte  BottomBar.svelte  Player.svelte  PlayerBar.svelte  PlayerCover.svelte  PlayerForward.svelte  PlayerPausePlay.svelte  PlayerRewind.svelte  PlayerTitle.svelte  Profile.svelte  Settings.svelte
src/lib/mock/: books.js
src/lib/stores/: player.js
src/routes/: +layout.svelte  +page.js  +page.svelte  BookList.svelte
src/routes/player/[book_id]/: +page.js  +page.svelte  Player.svelte
src/routes/profile/: +page.svelte
src/routes/settings/: +page.svelte
