[package]
name = "cyprus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[dependencies]
anyhow = "1.0.70"
thiserror = "1.0.40"
axum = "0.6.17"
tokio = { version = "1.27.0", features = ["full", "rt-multi-thread"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
log = "0.4.17"
env_logger = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio-util = { version = "0.7.8", features = ["io"] }
