[package]
name = "cyprus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[dependencies]
anyhow = "1.0.70"
thiserror = "1.0.40"
axum = "0.6.17"
tokio = { version = "1.27.0", features = ["full", "rt-multi-thread"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.0", features = ["trace"] } 
hyper = { version = "0.14.26", features = ["full"] }
mime = "0.3.17"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }